Set kitty background to a dark gray

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,13 @@
 
 # MY custom kitty config
-font_size                   14.0
+font_size                   11
 disable_ligatures           never
 # Fonts
 font_family                 FiraCode Nerd Font
-bold_font                   FiraCode Nerd Font Med
+bold_font                   auto
+italic_font                 auto
+bold_italic_font            auto
 
+# color scheme
+background                  #222222
 
