Set kitty font to 12pt

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 
 # MY custom kitty config
-font_size                   11
+font_size                   12
 disable_ligatures           never
 # Fonts
 font_family                 FiraCode Nerd Font
@@ -11,3 +11,5 @@ bold_italic_font            auto
 # color scheme
 background                  #222222
 
+# blue
+color5                      #558eef
