kitty: set terminal background opacity to .95

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,6 +10,7 @@ bold_italic_font            auto
 
 # color scheme
 background                  #222222
+background_opacity          0.95
 
 # blue
 color5                      #558eef
